# nbdev

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  apilist.txt  getting_started.html  getting_started.html.md  index.html  listings.json  llms-ctx-full.txt  llms-ctx.txt  pyproject.toml  search.json  settings.ini  setup.py  sitemap.xml  tutorial.html
.github/workflows/: deploy-manual.yaml  deploy.yaml  test.yaml
api/: clean.html  clean.html.md  cli.html  cli.html.md  config.html  config.html.md  diff.html  diff.html.md  doclinks.html  doclinks.html.md  export.html  export.html.md  frontmatter.html  frontmatter.html.md  index.html  maker.html  maker.html.md  merge.html  merge.html.md  migrate.html  migrate.html.md  process.html  process.html.md  processors.html  processors.html.md  qmd.html  qmd.html.md  quarto.html  quarto.html.md  release.html  release.html.md  serve.html  serve.html.md  showdoc.html  showdoc.html.md  sync.html  sync.html.md  test.html  test.html.md
blog/: index.html  index.xml
blog/posts/2022-07-28-nbdev2/: index.html
blog/posts/2022-08-25-jupyter-git/: index.html
blog/posts/2022-11-07-spaces/: index.html  index.md
explanations/: config.html  config.html.md  directives.html  directives.html.md  docs.html  docs.html.md  index.html  why_nbdev.html
nbdev/: __init__.py  _modidx.py  clean.py  cli.py  config.py  diff.py  doclinks.py  export.py  frontmatter.py  maker.py  merge.py  migrate.py  process.py  processors.py  qmd.py  quarto.py  release.py  serve.py  serve_drv.py  showdoc.py  skill.py  sync.py  test.py  test_update_directives.py
nbs/: contributing.ipynb  getting_started.ipynb  index.qmd.py
nbs/api/: 01_config.ipynb  02_maker.ipynb  03_process.ipynb  04_export.ipynb  05_doclinks.ipynb  06_sync.ipynb  07_merge.ipynb  08_showdoc.ipynb  09_frontmatter.ipynb  10_processors.ipynb  11_clean.ipynb  12_test.ipynb  13_cli.ipynb  14_quarto.ipynb  15_qmd.ipynb  16_migrate.ipynb  17_serve.ipynb  18_release.ipynb  19_diff.ipynb
nbs/blog/posts/2022-11-07-spaces/: index.qmd
nbs/explanations/: config.ipynb  directives.ipynb  docs.ipynb
nbs/tutorials/: best_practices.ipynb  blogging.ipynb  docs_only.ipynb  extensions.ipynb  git_friendly_jupyter.ipynb  migrating.ipynb  modular_nbdev.ipynb  pre_commit.ipynb  tutorial.ipynb
tests/: 00_some.thing.ipynb  01_everything.ipynb  directives.ipynb  docs_test.ipynb  export_procs.ipynb  file_var.ipynb  metadata.ipynb  plaintext.ipynb  showdoc_test.ipynb  update_directives.ipynb
tests/plaintext_files/: test.lgt.py  test.myst.md  test.pandoc.md  test.pct.py  test.py  test.spx.py
tools/: release-template.sh
tutorials/: best_practices.html  best_practices.html.md  blogging.html  blogging.html.md  docs_only.html  docs_only.html.md  extensions.html  extensions.html.md  git_friendly_jupyter.html  git_friendly_jupyter.html.md  index.html  migrating.html  migrating.html.md  modular_nbdev.html  modular_nbdev.html.md  pre_commit.html  pre_commit.html.md  qmd_intro.html  renderscript.html  tutorial.html  tutorial.html.md
