[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="nbdev"
description = "Create delightful software with Jupyter Notebooks"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard and the fast.ai community", email = "j@fast.ai"}]
keywords = ["nbdev", "fastai", "jupyter", "notebook", "export"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]
dependencies = [ "fastcore>=1.12.3", "execnb>=0.1.12", "astunparse", "ghapi>=1.0.3", "watchdog", "asttokens",
    "setuptools", "build", "fastgit", "pyyaml", "tomli; python_version < '3.11'", ]

[project.optional-dependencies]
dev = [ "ipywidgets", "nbdev-numpy", "nbdev-stdlib", "pandas", "matplotlib", "black", "svg.py", "nbclassic",
    "pysymbol_llm", "llms-txt", "sphinx", "plum-dispatch", ]

[project.urls]
Repository = "https://github.com/AnswerDotAI/nbdev"
Documentation = "https://nbdev.fast.ai/"

[project.scripts]
nbdev_create_config = "nbdev.config:nbdev_create_config"
nbdev_update = "nbdev.sync:nbdev_update"
nbdev_update_license = "nbdev.cli:nbdev_update_license"
nbdev_export = "nbdev.doclinks:nbdev_export"
nbdev_fix = "nbdev.merge:nbdev_fix"
nbdev_merge = "nbdev.merge:nbdev_merge"
nbdev_trust = "nbdev.clean:nbdev_trust"
nbdev_clean = "nbdev.clean:nbdev_clean"
nbdev_install_hooks = "nbdev.clean:nbdev_install_hooks"
nbdev_filter = "nbdev.cli:nbdev_filter"
nbdev_sidebar = "nbdev.quarto:nbdev_sidebar"
nbdev_test = "nbdev.test:nbdev_test"
nbdev_new = "nbdev.cli:nbdev_new"
nbdev_migrate = "nbdev.migrate:nbdev_migrate"
nbdev_migrate_config = "nbdev.migrate:nbdev_migrate_config"
nbdev_install_quarto = "nbdev.quarto:install_quarto"
nbdev_install = "nbdev.quarto:install"
nbdev_docs = "nbdev.quarto:nbdev_docs"
nbdev_preview = "nbdev.quarto:nbdev_preview"
nbdev_prepare = "nbdev.quarto:prepare"
nbdev_readme = "nbdev.quarto:nbdev_readme"
nbdev_contributing = "nbdev.quarto:nbdev_contributing"
nbdev_release_gh = "nbdev.release:release_gh"
nbdev_release_git = "nbdev.release:release_git"
nbdev_changelog = "nbdev.release:changelog"
nbdev_pypi = "nbdev.release:release_pypi"
nbdev_conda = "nbdev.release:release_conda"
nbdev_release_both = "nbdev.release:release_both"
nbdev_bump_version = "nbdev.release:nbdev_bump_version"
nbdev_requirements = "nbdev.release:write_requirements"
nbdev_proc_nbs = "nbdev.quarto:nbdev_proc_nbs"
nbdev_help = "nbdev.cli:chelp"
nb_export = "nbdev.cli:nb_export_cli"
watch_export = "nbdev.cli:watch_export"

[project.entry-points.nbdev]
nbdev = "nbdev._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "nbdev.__version__"}

[tool.setuptools.packages.find]
include = ["nbdev"]

[tool.nbdev]
custom_sidebar = true
readme_nb = "getting_started.ipynb"
jupyter_hooks = true

